# Distributed-log-committer

./: Dockerfile  configuration.properties  docker-compose.yml  main.cpp
tcp-server/: CMakeLists.txt  ReadMe.md  Request.cpp  Request.h  client.py  connection.cpp  connection.h  definitions.h  tcp_server.cpp  tcp_server.h  thread_pool.cpp  thread_pool.h
tcp-server/utils/: deserializer.cpp  deserializer.h  serializable.h  serializer.cpp  serializer.h
